--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,8 +5,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
     }
+    ext.kotlin_version = '1.3.0'
 }
 
 allprojects {
