--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>io.flutter.embedded_views_preview</key>
+    <value>YES</value>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <value>So I can track you while you use the app</value>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <value>So I can track you at all times</value>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
