--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.21+7
   location: ^2.3.5
-
+  flutter_background_location: ^0.0.4
+  sqflite: ^1.1.7+1
+  path_provider: ^1.3.0
+#https://github.com/Almoullim/background_location
 dev_dependencies:
   flutter_test:
     sdk: flutter
