--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_background_location: ^0.0.4
   sqflite: ^1.1.7+1
   path_provider: ^1.3.0
+  http: ^0.12.0+2
 #https://github.com/Almoullim/background_location
 dev_dependencies:
   flutter_test:
