--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   sqflite: ^1.1.7+1
   path_provider: ^1.3.0
   http: ^0.12.0+2
+  dryice: any
 #https://github.com/Almoullim/background_location
 dev_dependencies:
   flutter_test:
