--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   sqflite: ^1.1.7+1
   path_provider: ^1.3.0
   http: ^0.12.0+2
-  dryice: any
+  kiwi: ^0.2.0
+  fluttertoast: any
 #https://github.com/Almoullim/background_location
 dev_dependencies:
   flutter_test:
