--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,22 @@ dependencies:
   google_maps_flutter: ^0.5.21+7
   location: ^2.3.5
   flutter_background_location: ^0.0.4
+
   sqflite: ^1.1.7+1
+  jaguar_query: any
+  jaguar_orm: ^2.2.0
+  jaguar_query_sqflite: ^2.2.0
+
   path_provider: ^1.3.0
   http: ^0.12.0+2
   kiwi: ^0.2.0
   fluttertoast: any
-#https://github.com/Almoullim/background_location
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  jaguar_orm_gen: any
+  build_runner: any
+#flutter packages pub run build_runner build lib
 
 flutter:
   uses-material-design: true
