--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   jaguar_orm: ^2.2.0
   jaguar_query_sqflite: ^2.2.0
 
+  shared_preferences: any
   path_provider: ^1.3.0
   http: ^0.12.0+2
   kiwi: ^0.2.0
